# my_project

./: .gitignore  CMakeLists.txt
include/: mylib.h
lib/: mylib.c
src/: main.cpp
